Added fslightbox for project page images; removed css classes from Bootstrap for compatability

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -101,6 +101,9 @@ if (subtitle) {
         </div>
       </div>
     </footer>
+    <script is:inline src="/js/fslightbox.js">
+
+    </script>
     <!-- Bootstrap core JS-->
     <script src="/js/bootstrap.bundle.min.js" is:inline></script>
     <!-- Core theme JS-->
