--- a/src/pages/projects/anti-hero.astro
+++ b/src/pages/projects/anti-hero.astro
@@ -10,6 +10,7 @@ import NodeRecovery from "../../img/anti-hero/NodeRecovery.png";
 import NewServer from "../../img/anti-hero/NewServer.png";
 import MockupMBP_Node1 from "../../img/anti-hero/MockupMBP_Node1.png";
 import AntiHeroClient from "../../img/anti-hero/AntiHeroClient.png";
+import LightboxImage from "../../components/LightboxImage.astro";
 ---
 
 <script is:inline src="https://unpkg.com/feather-icons"></script>
@@ -248,10 +249,10 @@ import AntiHeroClient from "../../img/anti-hero/AntiHeroClient.png";
               take over for their partner.
             </h4>
           </div>
-          <Image
+          <LightboxImage
             src={FailureDetection}
             alt="Mainframe's Magic Schedule Builder on the homepage"
-            class="hero-image center"
+            className="hero-image center"
           />
         </div>
       </div>
@@ -273,10 +274,10 @@ import AntiHeroClient from "../../img/anti-hero/AntiHeroClient.png";
               Orchestrator. No user intervention needed.
             </h4>
           </div>
-          <Image
+          <LightboxImage
             src={NodeRecovery}
             alt="Mainframe's Magic Schedule Builder on the homepage"
-            class="hero-image center"
+            className="hero-image center"
           />
         </div>
       </div>
@@ -329,10 +330,10 @@ import AntiHeroClient from "../../img/anti-hero/AntiHeroClient.png";
               assign partners
             </h4>
           </div>
-          <Image
+          <LightboxImage
             src={NewServer}
             alt="Mainframe's Magic Schedule Builder on the homepage"
-            class="hero-image center"
+            className="hero-image center"
           />
         </div>
       </div>
@@ -354,10 +355,10 @@ import AntiHeroClient from "../../img/anti-hero/AntiHeroClient.png";
               Traffic Visualizer powered by D3.js and Three.js, respectively.
             </h4>
           </div>
-          <Image
+          <LightboxImage
             src={MockupMBP_Node1}
             alt="Mainframe's Magic Schedule Builder on the homepage"
-            class="hero-image center"
+            className="hero-image center"
           />
         </div>
       </div>
@@ -382,10 +383,10 @@ import AntiHeroClient from "../../img/anti-hero/AntiHeroClient.png";
               verbose URLs.
             </h4>
           </div>
-          <Image
+          <LightboxImage
             src={AntiHeroClient}
             alt="Mainframe's Magic Schedule Builder on the homepage"
-            class="hero-md-image center"
+            className="hero-md-image center"
           />
         </div>
       </div>
