--- a/src/pages/projects/aws-cost-optimizer.astro
+++ b/src/pages/projects/aws-cost-optimizer.astro
@@ -12,6 +12,7 @@ import MBP_PriceCalculator from "../../img/aws-cost-optimizer/MBP_PriceCalculato
 import MBP_UptimeCalculator from "../../img/aws-cost-optimizer/MBP_UptimeCalculator.png";
 import MBP_OptWizardMB from "../../img/aws-cost-optimizer/MBP_OptWizardMB.png";
 import MBP_ProjectedSavings from "../../img/aws-cost-optimizer/MBP_ProjectedSavings.png";
+import LightboxImage from "../../components/LightboxImage.astro";
 ---
 
 <script is:inline src="https://unpkg.com/feather-icons"></script>
@@ -250,10 +251,10 @@ import MBP_ProjectedSavings from "../../img/aws-cost-optimizer/MBP_ProjectedSavi
               No need for any special formulas or advanced keyboard shortcuts.
             </h4>
           </div>
-          <Image
+          <LightboxImage
             src={MBP_OptimizerHome}
             alt="Mainframe's Magic Schedule Builder on the homepage"
-            class="hero-image center"
+            className="hero-image center"
           />
         </div>
       </div>
@@ -298,10 +299,10 @@ import MBP_ProjectedSavings from "../../img/aws-cost-optimizer/MBP_ProjectedSavi
                 <h4 class="mb-4">
                   Quickly and easily calculate instance uptime, all without the pen and paper.
                 </h4>
-                <Image
+                <LightboxImage
                   src={MBP_UptimeCalculator}
                   alt="Mainframe's Magic Schedule Builder on the homepage"
-                  class="hero-md-image center"
+                  className="hero-md-image center"
                 />
               </div>
             </div>
@@ -315,10 +316,10 @@ import MBP_ProjectedSavings from "../../img/aws-cost-optimizer/MBP_ProjectedSavi
                 <h4 class="mb-4">
                   Calculate projected instance price metrics, no price lookups required.
                 </h4>
-                <Image
+                <LightboxImage
                   src={MBP_PriceCalculator}
                   alt="Mainframe's Magic Schedule Builder on the homepage"
-                  class="hero-md-image center"
+                  className="hero-md-image center"
                 />
               </div>
             </div>
@@ -344,10 +345,10 @@ import MBP_ProjectedSavings from "../../img/aws-cost-optimizer/MBP_ProjectedSavi
               suitability.
             </h4>
           </div>
-          <Image
+          <LightboxImage
             src={MBP_OptWizardMB}
             alt="Mainframe's Magic Schedule Builder on the homepage"
-            class="hero-image center"
+            className="hero-image center"
           />
         </div>
       </div>
@@ -370,10 +371,10 @@ import MBP_ProjectedSavings from "../../img/aws-cost-optimizer/MBP_ProjectedSavi
               
             </h4>
           </div>
-          <Image
+          <LightboxImage
             src={MBP_ProjectedSavings}
             alt="Mainframe's Magic Schedule Builder on the homepage"
-            class="hero-image center"
+            className="hero-image center"
           />
         </div>
       </div>
