--- a/src/pages/projects/mercer-food-finder.astro
+++ b/src/pages/projects/mercer-food-finder.astro
@@ -17,6 +17,7 @@ import DataImportExport_MBP from "../../img/mercer-food-finder/MBP_DataImportExp
 import MBP_Translate_Main from "../../img/mercer-food-finder/MBP_Translate_Main.png";
 import MBP_Translate_Printout from "../../img/mercer-food-finder/MBP_Translate_Printout.png";
 import MBP_TutorialSystem from "../../img/mercer-food-finder/MBP_TutorialSystem.png";
+import LightboxImage from "../../components/LightboxImage.astro";
 ---
 
 <script is:inline src="https://unpkg.com/feather-icons"></script>
@@ -263,10 +264,10 @@ import MBP_TutorialSystem from "../../img/mercer-food-finder/MBP_TutorialSystem.
               Finder helps you quickly find food resources that suit your needs.
             </h4>
           </div>
-          <Image
+          <LightboxImage
             src={Filtering_MBP}
             alt="Mainframe's Magic Schedule Builder on the homepage"
-            class="hero-image center"
+            className="hero-image center"
           />
         </div>
       </div>
@@ -287,10 +288,10 @@ import MBP_TutorialSystem from "../../img/mercer-food-finder/MBP_TutorialSystem.
               directly embedded Google Maps widget.
             </h4>
           </div>
-          <Image
+          <LightboxImage
             src={FilterMap_MBP}
             alt="Mainframe's Magic Schedule Builder on the homepage"
-            class="hero-image center"
+            className="hero-image center"
           />
         </div>
       </div>
@@ -306,17 +307,17 @@ import MBP_TutorialSystem from "../../img/mercer-food-finder/MBP_TutorialSystem.
           </div>
           <div class="row">
             <div class="col-md-6 mb-sm-4">
-              <Image
+              <LightboxImage
                 src={EditResource_MBP}
                 alt="Mainframe's Magic Schedule Builder on the homepage"
-                class="hero-sm-image mx-auto center"
+                className="hero-sm-image mx-auto center"
               />
             </div>
             <div class="col-md-6 mb-sm-4">
-              <Image
+              <LightboxImage
                 src={GoogleCalendar_MBP}
                 alt="Mainframe's Magic Schedule Builder on the homepage"
-                class="hero-sm-image mx-auto center"
+                className="hero-sm-image mx-auto center"
               />
             </div>
           </div>
@@ -343,10 +344,10 @@ import MBP_TutorialSystem from "../../img/mercer-food-finder/MBP_TutorialSystem.
                   limited admins have access to edit their organization data
                   directly on the platform.
                 </h4>
-                <Image
+                <LightboxImage
                   src={InviteUser_MBP}
                   alt="Mainframe's Magic Schedule Builder on the homepage"
-                  class="hero-md-image center"
+                  className="hero-md-image center"
                 />
               </div>
             </div>
@@ -363,10 +364,10 @@ import MBP_TutorialSystem from "../../img/mercer-food-finder/MBP_TutorialSystem.
                   or create a new account in order to edit their organization's
                   resources.
                 </h4>
-                <Image
+                <LightboxImage
                   src={EditAccess_MBP}
                   alt="Mainframe's Magic Schedule Builder on the homepage"
-                  class="hero-md-image center"
+                  className="hero-md-image center"
                 />
               </div>
             </div>
@@ -391,10 +392,10 @@ import MBP_TutorialSystem from "../../img/mercer-food-finder/MBP_TutorialSystem.
               maintaining complete and total privacy for its users.
             </h4>
           </div>
-          <Image
+          <LightboxImage
             src={AnonUserProfiles_MBP}
             alt="Mainframe's Magic Schedule Builder on the homepage"
-            class="hero-image center"
+            className="hero-image center"
           />
         </div>
       </div>
@@ -408,10 +409,10 @@ import MBP_TutorialSystem from "../../img/mercer-food-finder/MBP_TutorialSystem.
               and anonymous user data.
             </h4>
           </div>
-          <Image
+          <LightboxImage
             src={DataImportExport_MBP}
             alt="Mainframe's Magic Schedule Builder on the homepage"
-            class="hero-image center"
+            className="hero-image center"
           />
         </div>
       </div>
@@ -435,10 +436,10 @@ import MBP_TutorialSystem from "../../img/mercer-food-finder/MBP_TutorialSystem.
               variety of languages.
             </h4>
           </div>
-          <Image
+          <LightboxImage
             src={MBP_Translate_Main}
             alt="Mainframe's Magic Schedule Builder on the homepage"
-            class="hero-image center"
+            className="hero-image center"
           />
         </div>
       </div>
@@ -453,10 +454,10 @@ import MBP_TutorialSystem from "../../img/mercer-food-finder/MBP_TutorialSystem.
               printouts too.
             </h4>
           </div>
-          <Image
+          <LightboxImage
             src={MBP_Translate_Printout}
             alt="Mainframe's Magic Schedule Builder on the homepage"
-            class="hero-image center"
+            className="hero-image center"
           />
         </div>
       </div>
@@ -479,10 +480,10 @@ import MBP_TutorialSystem from "../../img/mercer-food-finder/MBP_TutorialSystem.
               Mercer County Free Food Finder app.
             </h4>
           </div>
-          <Image
+          <LightboxImage
             src={MBP_TutorialSystem}
             alt="Mainframe's Magic Schedule Builder on the homepage"
-            class="hero-image center"
+            className="hero-image center"
           />
         </div>
       </div>
