--- a/src/pages/projects/mainframe-classic.astro
+++ b/src/pages/projects/mainframe-classic.astro
@@ -5,6 +5,7 @@ import MainframeMBPImage from "../../img/mainframe_msb_macbookpro.png";
 import "../../styles/uikit.css";
 import { Image } from "astro:assets";
 // import "../../styles/global.css";
+import LightboxImage from "../../components/LightboxImage.astro";
 ---
 
 <script is:inline src="https://unpkg.com/feather-icons"></script>
@@ -241,10 +242,10 @@ import { Image } from "astro:assets";
               you log in, they seamlessly become your desktop wallpaper.
             </h4>
           </div>
-          <Image
+          <LightboxImage
           src={MainframeMBPImage}
           alt="Mainframe's Magic Schedule Builder on the homepage"
-          class="hero-image center"
+          className="hero-image center"
         />
         </div>
       </div>
@@ -261,10 +262,10 @@ import { Image } from "astro:assets";
                   When you log in, they seamlessly become your desktop
                   wallpaper.
                 </h4>
-                <Image
+                <LightboxImage
                   src={MainframeMBPImage}
                   alt="Mainframe's Magic Schedule Builder on the homepage"
-                  class="hero-md-image center"
+                  className="hero-md-image center"
                 />
               </div>
             </div>
@@ -281,10 +282,10 @@ import { Image } from "astro:assets";
                   When you log in, they seamlessly become your desktop
                   wallpaper.
                 </h4>
-                <Image
+                <LightboxImage
                   src={MainframeMBPImage}
                   alt="Mainframe's Magic Schedule Builder on the homepage"
-                  class="hero-md-image center"
+                  className="hero-md-image center"
                 />
               </div>
             </div>
@@ -309,10 +310,10 @@ import { Image } from "astro:assets";
               you log in, they seamlessly become your desktop wallpaper.
             </h4>
           </div>
-          <Image
+          <LightboxImage
           src={MainframeMBPImage}
           alt="Mainframe's Magic Schedule Builder on the homepage"
-          class="hero-image center"
+          className="hero-image center"
         />
         </div>
       </div>
@@ -329,10 +330,10 @@ import { Image } from "astro:assets";
                   When you log in, they seamlessly become your desktop
                   wallpaper.
                 </h4>
-                <Image
+                <LightboxImage
                   src={MainframeMBPImage}
                   alt="Mainframe's Magic Schedule Builder on the homepage"
-                  class="hero-md-image center"
+                  className="hero-md-image center"
                 />
               </div>
             </div>
@@ -349,10 +350,10 @@ import { Image } from "astro:assets";
                   When you log in, they seamlessly become your desktop
                   wallpaper.
                 </h4>
-                <Image
+                <LightboxImage
                   src={MainframeMBPImage}
                   alt="Mainframe's Magic Schedule Builder on the homepage"
-                  class="hero-md-image center"
+                  className="hero-md-image center"
                 />
               </div>
             </div>
