--- a/src/pages/projects/my-housing.astro
+++ b/src/pages/projects/my-housing.astro
@@ -14,6 +14,7 @@ import MBP_DrawSettings from "../../img/my-housing/MBP_DrawSettings.png";
 import MBP_DrawManagement from "../../img/my-housing/MBP_DrawManagement.png";
 import MBP_RoomManagement from "../../img/my-housing/MBP_RoomManagement.png";
 import MBP_RoomSelectionComplete from "../../img/my-housing/MBP_RoomSelectionComplete.png";
+import LightboxImage from "../../components/LightboxImage.astro";
 ---
 
 <script is:inline src="https://unpkg.com/feather-icons"></script>
@@ -257,10 +258,10 @@ import MBP_RoomSelectionComplete from "../../img/my-housing/MBP_RoomSelectionCom
               of available housing that is always up-to-date.
             </h4>
           </div>
-          <Image
+          <LightboxImage
             src={MBP_AvailableRoomSearch}
             alt="Mainframe's Magic Schedule Builder on the homepage"
-            class="hero-image center"
+            className="hero-image center"
           />
         </div>
       </div>
@@ -285,10 +286,10 @@ import MBP_RoomSelectionComplete from "../../img/my-housing/MBP_RoomSelectionCom
               or location.
             </h4>
           </div>
-          <Image
+          <LightboxImage
             src={MBP_RoomSelectMBP}
             alt="Mainframe's Magic Schedule Builder on the homepage"
-            class="hero-image center"
+            className="hero-image center"
           />
         </div>
       </div>
@@ -310,10 +311,10 @@ import MBP_RoomSelectionComplete from "../../img/my-housing/MBP_RoomSelectionCom
               submit.
             </h4>
           </div>
-          <Image
+          <LightboxImage
             src={MBP_DrawApplication}
             alt="Mainframe's Magic Schedule Builder on the homepage"
-            class="hero-image center"
+            className="hero-image center"
           />
         </div>
       </div>
@@ -334,10 +335,10 @@ import MBP_RoomSelectionComplete from "../../img/my-housing/MBP_RoomSelectionCom
               department's policies.
             </h4>
           </div>
-          <Image
+          <LightboxImage
             src={MBP_DrawWizard2}
             alt="Mainframe's Magic Schedule Builder on the homepage"
-            class="hero-image center"
+            className="hero-image center"
           />
         </div>
       </div>
@@ -350,10 +351,10 @@ import MBP_RoomSelectionComplete from "../../img/my-housing/MBP_RoomSelectionCom
               preview each group's randomized draw time.
             </h4>
           </div>
-          <Image
+          <LightboxImage
             src={MBP_DrawSettings}
             alt="Mainframe's Magic Schedule Builder on the homepage"
-            class="hero-image center"
+            className="hero-image center"
           />
         </div>
       </div>
@@ -373,10 +374,10 @@ import MBP_RoomSelectionComplete from "../../img/my-housing/MBP_RoomSelectionCom
               Review draw applications, generate draw times, and edit settings.
             </h4>
           </div>
-          <Image
+          <LightboxImage
             src={MBP_DrawManagement}
             alt="Mainframe's Magic Schedule Builder on the homepage"
-            class="hero-image center"
+            className="hero-image center"
           />
         </div>
       </div>
@@ -389,10 +390,10 @@ import MBP_RoomSelectionComplete from "../../img/my-housing/MBP_RoomSelectionCom
               students.
             </h4>
           </div>
-          <Image
+          <LightboxImage
             src={MBP_RoomManagement}
             alt="Mainframe's Magic Schedule Builder on the homepage"
-            class="hero-image center"
+            className="hero-image center"
           />
         </div>
       </div>
@@ -415,10 +416,10 @@ import MBP_RoomSelectionComplete from "../../img/my-housing/MBP_RoomSelectionCom
               are automatically marked as reserved.
             </h4>
           </div>
-          <Image
+          <LightboxImage
             src={MBP_RoomSelectionComplete}
             alt="Mainframe's Magic Schedule Builder on the homepage"
-            class="hero-image center"
+            className="hero-image center"
           />
         </div>
       </div>
