--- a/src/pages/projects/mainframe-pro.astro
+++ b/src/pages/projects/mainframe-pro.astro
@@ -430,7 +430,7 @@ import LightboxImage from "../../components/LightboxImage.astro";
             </h4>
           </div>
           <div class="row">
-            <div class="col-lg-8 mb-md-4 mb-0">
+            <div class="col-lg-8 mb-lg-0 mb-4">
               <LightboxImage
                 src={QuickGrader_MBP}
                 alt="Mainframe's Magic Schedule Builder on the homepage"
