Added updated Food Finder project thumbnail and badges

--- a/src/components/FilterBadge.astro
+++ b/src/components/FilterBadge.astro
@@ -32,7 +32,8 @@ const themeMappings = {
   Sequelize: "#2578bf",
   "Spring Boot": "#5fb833",
   "Kafka": "#f33012",
-  "Kubernetes": "#2e6ce6"
+  "Kubernetes": "#2e6ce6",
+  "Django": "#2aaa76"
 };
 
 const foregroundColor = themeMappings[badgeText];
