--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -46,7 +46,7 @@ import MyHousingCardPreview from "../img/my-housing/ProjectCardPreview.png";
             linkTo="/projects/mainframe-pro"
           />
           <ProjectCard
-          tagList="Flask, Javascript, EC2, Python, PostgreSQL, Git"
+          tagList="React, Django, Flask, Javascript, EC2, Python, PostgreSQL, Git"
           projectTitle="Mercer County Free Food Finder"
           description="A fully-featured web application for connecting Mercer County residents with free food resources near them. Comes equipped with a feature rich backend to make management of resource data a breeze. Created in partnership with the Trenton Health Team."
           imageSrc={MFFCardPreview.src}
