Updated main page UI + React Food Finder technology chips

--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -67,6 +67,37 @@ import "../styles/global.css";
         <!-- Experience Section-->
         <section>
           <h2 class="text-primary fw-bolder mb-4">Key Experience</h2>
+
+          <div class="card shadow border-0 rounded-4 mb-5">
+            <div class="card-body p-5">
+              <div class="row align-items-center gx-5">
+                <div class="col text-center text-lg-start mb-4 mb-lg-0">
+                  <div class="bg-light p-4 rounded-4">
+                    <div class="text-primary fw-bolder mb-2">
+                      Aug 2024 - Present
+                    </div>
+                    <div class="small fw-bolder">
+                      Application Engineer
+                    </div>
+                    <div class="small text-primary">The Walt Disney Company</div>
+                    <div class="small text-muted">Lake Buena Vista, FL</div>
+                  </div>
+                </div>
+                <div class="col-lg-7">
+                  <div>
+                    <ul>
+                      <li>Design, build, and ship new features of a cutting-edge software platform that serves strategic internal business decision-makers for Disney’s Media Networks</li>
+                      <li>Collaborate with other Application Engineers to build application pages, services, and components as specified, prioritized, and scheduled by Product leads</li>
+                      <li>Collaborate with Product Managers to understand business opportunities and requirements</li>
+                      <li>Collaborate with Data Scientists to create user-friendly interfaces for science model inputs & outputs serving end-to-end solutions</li>
+                      <li>Collaborate with Data Engineers to build data storage, retrieval, and archiving routines </li>
+                      <li>Propose creative user experiences through working prototypes that meet business and application requirements. </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
           
           <div class="card shadow border-0 rounded-4 mb-5">
             <div class="card-body p-5">
